fix: operation evaluation error and content-type check